changes
# Conflicts:
#	src/main/java/FemmeFit/demo2/config/SecurityConfig.java